--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE BEATLES</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<title>The Beatles</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
 
-                                             <center><h1>Tʜᴇ Bᴇᴀᴛʟᴇs</h1></center>
-    <p>     The Beatles foi uma banda de rock britânica formada em 1960 na cidade de Liverpool. Formada por John Lennon, Paul McCartney, George Harrison e Ringo Starr, é considerada a banda mais influente de todos os tempos.</p>
-        A banda criada em 1957, inicialmente foi formada por John Lennon e seus colegas de escola, Peter Sholton, Erick Griffths, Bill Smith e Rod Davis. Em homenagem a escola Quarry Bank School, a banda recebeu o nome de The Quarrymen. Ainda em 1957, Paul McCartney foi convidado a integrar a banda.</p>
-                                                  <center><h1>Aʟʙᴜɴs</h1></center>  
-    <p>     Dentre os varios álbuns podemos citar os de mais sucessos e consequentemente  os mais conhecidos: </p>
-    <p>☆Please Please Me (1963) </p>
-    <p>☆With the Beatles (1963)</p>
-    <p>☆A Hard Day's Night (1964)</p>
-    <p>☆Beatles for Sale (1964)</p>
-    <p>☆Rubber Soul (1965)</p>
-                                               <center><h1>Mᴜ́sɪᴄᴀs ᴍᴀɪs ᴄᴏɴʜᴇᴄɪᴅᴀs</h1></center>  
-    <p>☆Yesterday (1965)</p>
-    <p>☆Let It Be (1970)</p>              
-    <p>☆Something (1969)</p>       
-    <p>☆Hey Jude (1968)</p>            <center><img src="the-beatles.jpeg"alt=""></center>
-    <p>☆Yellow Submarine (1966)</p>
-    <p>☆Come Together (1969)</p>
-    <p>☆A Hard Days Night(1964)</p>
-                                                    <center> <h1>Cᴜʀɪᴏsɪᴅᴀᴅᴇs</h1></center>
-     <p>☆Se hoje temos shows em estádios,é graças os Beatles. Eles não só impactaram a história da música, eles revolucionaram a parada toda;</p>
-     <p>☆Nunca se apresentaram no Brasil, eles não tocavam em países com regimes autoritários, e o Brasil era governedo por uma ditadura;</p>
-     <p>☆Entraram em uma polêmica por falarem que eram mais populares que Jesus, causando revoltas de vários americanos os quais chegaram a queimar discos da banda;</p>
-     <p>☆A famosa Penny Lane, Penny Lane é o nome de uma das mais famosas músicas do grupo. Ela consta no álbum Magical Mystery Tour e foi composta por Paul McCartney, A inspiração vem de uma rua de Liverpool. A música fala sobre as pessoas que viviam naquele lugar, que foi muito importante na juventude de Lennon e McCartney, Mas com o sucesso da canção, a rua virou alvo dos fãs. A placada da rua inclusive foi roubada diversas vezes até que a prefeitura teve que pintar o nome na parede.</p>
-     <p>☆Beatles animados, Entre 1965 e 1969 os Beatles animaram a TV todo sábado de manhã. O desenho do grupo mostrava as aventuras do quarteto de Liverpool. O nome de cada episódio era baseado no título de uma música deles e a história abordava a letra da canção.</p>
-    <param name="" value="">
-    <img src="" alt="" srcset="">
-</img>
+	<body>
+		<header>
+			<h1 class="titulo-principal">Tʜᴇ Bᴇᴀᴛʟᴇs</h1>
+		</header>
+		<img id="banner" src="beatles2.0.jpg">
+		<div class="principal">
+			<h2 class="titulo-centralizado">Hɪsᴛᴏ́ʀɪᴀ ᴅᴏs Bᴇᴀᴛʟᴇs</h2>
+	 
+			<p>Os <strong>Bᴇᴀᴛʟᴇs</strong> foram uma banda de rock britânica formada em Liverpool, em 1960, e é hoje o grupo musical mais bem-sucedido e aclamado da história da música pop.</p>
+			
+
+			<p id="missao"><em>Frase de uma das músicas mai famosas: <strong>"𝒀𝒆𝒔𝒕𝒆𝒓𝒅𝒂𝒚, 𝒂𝒍𝒍 𝒎𝒚 𝒕𝒓𝒐𝒖𝒃𝒍𝒆𝒔 𝒔𝒆𝒆𝒎𝒆𝒅 𝒔𝒐 𝒇𝒂𝒓 𝒂𝒘𝒂𝒚. ..."</strong>.</em></p>
+
+			<p>
+				Fizeram sucesso mundial com suas músicas, principalmente na década de 1960. O sucesso deve-se ao estilo revolucionário que implantaram no cenário musical. Eram canções com letras marcantes e efeitos de guitarra fortes. As letras atingiram em cheio os jovens, pois eram contestadoras e revolucionárias para a época. Os Beatles também foram a primeira banda a tocar em um estádio.  </p>
+		</div>
+
+		<div class="beneficios">
+			<h3 class="titulo-centralizado">Benefícios</h3>
+
+			<ul>
+				<li class="itens">Atendimento aos Clientes</li>
+				<li class="itens">Espaço diferenciado</li>
+				<li class="itens">Localização</li>
+				<li class="itens">Profissionais Qualificados</li>
+			</ul>
+
+			<img src="beneficios.jpg" class="imagembeneficios">
+		</div>
+	</body>
 </html>
