--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Tʜᴇ Bᴇᴀᴛʟᴇs</h1>
 		</header>
-		<img id="banner" src="beatles2.0.jpg">
+		<img id="banner" src="guy.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Hɪsᴛᴏ́ʀɪᴀ ᴅᴏs Bᴇᴀᴛʟᴇs</h2>
 	 
@@ -23,14 +23,14 @@
 				Fizeram sucesso mundial com suas músicas, principalmente na década de 1960. O sucesso deve-se ao estilo revolucionário que implantaram no cenário musical. Eram canções com letras marcantes e efeitos de guitarra fortes. As letras atingiram em cheio os jovens, pois eram contestadoras e revolucionárias para a época. Os Beatles também foram a primeira banda a tocar em um estádio.  </p>
 		</div>
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+		<div class="Aʟʙᴜɴs ᴍᴀɪs ɪᴍᴘᴏʀᴛᴀɴᴛᴇs">
+			<h3 class="titulo-centralizado">Aʟʙᴜɴs ᴍᴀɪs ɪᴍᴘᴏʀᴛᴀɴᴛᴇs</h3>
 
 			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
+				<li class="itens">Revolver 1966;</li>
+				<li class="itens">Abbey Road 1969;</li>
+				<li class="itens">Sgt Pepper's Lonely Hearts Club Band 1967;</li>
+				<li class="itens">Please Please Me 1963.</li>
 			</ul>
 
 			<img src="beneficios.jpg" class="imagembeneficios">
