--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Tʜᴇ Bᴇᴀᴛʟᴇs</h1>
 		</header>
-		<img id="banner" src="guy.jpg">
+		<img id="banner" src="beatles-High_Quality_wallpaper_1366x768.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Hɪsᴛᴏ́ʀɪᴀ ᴅᴏs Bᴇᴀᴛʟᴇs</h2>
 	 
