--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p id="missao"><em>Frase de uma das músicas mai famosas: <strong>"𝒀𝒆𝒔𝒕𝒆𝒓𝒅𝒂𝒚, 𝒂𝒍𝒍 𝒎𝒚 𝒕𝒓𝒐𝒖𝒃𝒍𝒆𝒔 𝒔𝒆𝒆𝒎𝒆𝒅 𝒔𝒐 𝒇𝒂𝒓 𝒂𝒘𝒂𝒚. ..."</strong>.</em></p>
 
 			<p>
-				Fizeram sucesso mundial com suas músicas, principalmente na década de 1960. O sucesso deve-se ao estilo revolucionário que implantaram no cenário musical. Eram canções com letras marcantes e efeitos de guitarra fortes. As letras atingiram em cheio os jovens, pois eram contestadoras e revolucionárias para a época. Os Beatles também foram a primeira banda a tocar em um estádio.  </p>
+				Fizeram sucesso mundial com suas músicas, principalmente na década de 1960. O sucesso deve-se ao estilo revolucionário que implantaram no cenário musical. Eram canções com letras marcantes e efeitos de guitarra fortes. As letras atingiram em cheio os jovens, pois eram contestadoras e revolucionárias para a época. Se hoje temos grandes shows em estádios é graça a eles também, pois foram os primeiros a realizarem, lotando o estadio com cerca de 70000 mil pessoas. Infelizmente em 1970, George Harrison anuncia sua saída da banda, pondo fim a banda que passava por um momento de brigas e discussões desde a morte do seu empressário que também conhecido como quinto beatle. Esse foi o fim dos Beatles como banda, mas vivem em nossos corações e como refêrencias musicais até os dias de hoje. </p>
 		</div>
 
 		<div class="Aʟʙᴜɴs ᴍᴀɪs ɪᴍᴘᴏʀᴛᴀɴᴛᴇs">
@@ -33,7 +33,7 @@
 				<li class="itens">Please Please Me 1963.</li>
 			</ul>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
+			<img src="foto 2.jpg" class="foto 2.jpg">
 		</div>
 	</body>
 </html>
