--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<p id="missao"><em>Frase de uma das músicas mai famosas: <strong>"𝒀𝒆𝒔𝒕𝒆𝒓𝒅𝒂𝒚, 𝒂𝒍𝒍 𝒎𝒚 𝒕𝒓𝒐𝒖𝒃𝒍𝒆𝒔 𝒔𝒆𝒆𝒎𝒆𝒅 𝒔𝒐 𝒇𝒂𝒓 𝒂𝒘𝒂𝒚. ..."</strong>.</em></p>
 
 			<p>
-				Fizeram sucesso mundial com suas músicas, principalmente na década de 1960. O sucesso deve-se ao estilo revolucionário que implantaram no cenário musical. Eram canções com letras marcantes e efeitos de guitarra fortes. As letras atingiram em cheio os jovens, pois eram contestadoras e revolucionárias para a época. Se hoje temos grandes shows em estádios é graça a eles também, pois foram os primeiros a realizarem, lotando o estadio com cerca de 70000 mil pessoas. Infelizmente em 1970, George Harrison anuncia sua saída da banda, pondo fim a banda que passava por um momento de brigas e discussões desde a morte do seu empressário que também conhecido como quinto beatle. Esse foi o fim dos Beatles como banda, mas vivem em nossos corações e como refêrencias musicais até os dias de hoje. </p>
+				Fizeram sucesso mundial com suas músicas, principalmente na década de 1960. O sucesso deve-se ao estilo revolucionário que implantaram no cenário musical. Eram canções com letras marcantes e efeitos de guitarra fortes. As letras atingiram em cheio os jovens, pois eram contestadoras e revolucionárias para a época. Se hoje temos grandes shows em estádios é graça a eles também, pois foram os primeiros a realizarem, lotando o estadio com cerca de 70000 mil pessoas. Infelizmente em 1970, George Harrison anuncia sua saída da banda, pondo fim a banda que passava por um momento de brigas e discussões desde a morte do seu empressário que também conhecido como quinto beatle. Esse foi o fim dos Beatles como banda, mas vivem em nossos corações e como refêrencias musicais até os dias de hoje. Hoje em dia só temos somente 2 integrantes vivos, Paul McCartney e Ringo Starr. Grandes pessoas que morreram mas que estão eternizadas na história da música para sempre. "Nᴏ ғɪɴᴀʟ, ᴏ ᴀᴍᴏʀ ǫᴜᴇ ᴠᴏᴄᴇ̂ ʀᴇᴄᴇʙᴇ ᴇ́ ɪɢᴜᴀʟ ᴀᴏ ᴀᴍᴏʀ ǫᴜᴇ ᴠᴏᴄᴇ̂ ᴅᴀ́." </p>
 		</div>
 
 		<div class="Aʟʙᴜɴs ᴍᴀɪs ɪᴍᴘᴏʀᴛᴀɴᴛᴇs">
@@ -31,6 +31,10 @@
 				<li class="itens">Abbey Road 1969;</li>
 				<li class="itens">Sgt Pepper's Lonely Hearts Club Band 1967;</li>
 				<li class="itens">Please Please Me 1963.</li>
+				<li class="itens">The Beatles 1968.</li>
+				<li class="itens">Yellow Submarine 1969.</li>
+				<li class="itens">Meet the Beatles! 1964.</li>
+				<li class="itens">Rubber Soul 1965.</li>
 			</ul>
 
 			<img src="foto 2.jpg" class="foto 2.jpg">
